virtual-keyboard/src/style/style.scss
$color-keyboard: #eee;
$color-key-bg: #bbb;
$color-key: #808080;

html {
    font-size: 10px;
}

main {
    position: relative;
    padding: 0 10px;
    overflow: hidden;
    min-height: 100vh;
}

.keyboard {
    position: relative;
    max-width: 1200px;
    margin: 0 auto;
    padding: 20px 30px;
    display: grid;
    grid-template-rows: repeat(5, auto);
    grid-row-gap: 20px;
    background-color: $color-keyboard;
    font-size: 2.3rem;
    animation: show 1s ease-in;
    animation: hide 1s ease-out;
}

@keyframes show {
    0% {
        bottom: -320px;
    }

    100% {
        bottom: 0;
    }
}

@keyframes hide {
    0% {
        bottom: 0;
    }

    100% {
        bottom: -320px;
    }
}

.keyboard.hide {
    position: absolute;
    bottom: -320px;
    width: 100%;
}

.show-hide-btn {
    display: flex;
    position: absolute;
    top: -30px;
    right: 0;
}

.show-hide-btn__keyboard-icon {
    margin-right: 5px;
    display: block;
    width: 32px;
    height: 32px;
    background-image: url('../../assets/icons/keyboard-key.png');
    background-repeat: no-repeat;
    background-position: center;
}

.show-hide-btn__arrow-icon {
    display: block;
    width: 32px;
    height: 32px;
    background-image: url('../../assets/icons/expand-arrow.png');
    background-repeat: no-repeat;
    background-position: center;
}

.keyboard__row {
    display: flex;
    height: 40px;
}

.input-area {
    display: block;
    margin: 0 auto 20px auto;
    width: 400px;
    height: 200px;
    font-size: 1.5rem;
    resize: none;
}

[data-key-code],
[data-code] {
    margin-left: 2%;
    background-color: $color-key-bg;
    box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.2);
    color: $color-keyboard;
}

[data-key-code] {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 40px;
    width: 40%;
}

[data-code] {
    flex-basis: 100%;
    flex-grow: 3;
}

.key {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: #839496;
    border-radius: 3px;
    animation: push .2s ease;
    user-select: none;
    cursor: pointer;
    box-shadow: 0px 5px 0px rgba(0, 0, 0, 0.2);
    transition: transform .2s box-shadow .2s;
}

.key.active {
    transform: translateY(3px);
    box-shadow: 0px 2px 0px rgba(0, 0, 0, 0.2);
}

.key:hover {
    background-color: #006200;
}

[data-code="ShiftLeft"] {
    background-image: url('../../assets/icons/shift.png');
    background-repeat: no-repeat;
    background-size: 34px 34px;
    background-position: center;
}

[data-code="ShiftLeft"].active {
    background-color: #949683;
}

[data-code="ArrowLeft"] {
    background-image: url('../../assets/icons/arrowLeft.png');
    background-repeat: no-repeat;
    background-size: 34px 34px;
    background-position: center;
    flex-basis: 50%;
}

[data-code="ArrowRight"] {
    background-image: url('../../assets/icons/arrowRight.png');
    background-repeat: no-repeat;
    background-size: 34px 34px;
    background-position: center;
    flex-basis: 50%;
}

[data-code="Sound"] {
    background-image: url('../../assets/icons/sound-on.svg');
    background-repeat: no-repeat;
    background-size: 34px 34px;
    background-position: center;
    flex-basis: 50%;
}

[data-code="Sound"].sound-off {
    background-image: url('../../assets/icons/sound-off.svg');
}

[data-code="Space"] {
    flex-basis: 100%;
}

.hidden {
    display: none;
}

@media (max-width: 700px) {
    .keyboard {
        padding: 10px 10px;
        font-size: 1.5rem;
    }

    [data-key-code],
    [data-code] {
        margin-left: 1%;
    }
}

.input-container {
    position: relative;
}

.mic-button {
    display: block;
    position: absolute;
    top: 20px;
    right: calc((100vw - 20px - 480px) / 2);
    background-image: url("../../assets/icons/mute.png");
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    width: 30px;
    height: 30px;
    cursor: pointer;
}

